<resources>
    <string name="app_name">奔跑吧音乐</string>
    <string name="title_activity_running_music">RunningMusicActivity</string>

    <string name="title_activity_test">test</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_line">当音乐遇到你 让脚步听到它的声音</string>
    <string name="menu_settings">Settings</string>
    <string name="floatint_behavior">android.support.design.widget.FloatingActionButton$Behavior</string>

    <string name="skip">跳过</string>

    <string name="indoor_run">室内跑步</string>
    <string name="outdoor_run">室外跑步</string>
    <string name="online_music">在线音乐</string>
    <string name="offline_music">离线音乐</string>
    <string name="title_activity_run_result">RunResultActivity</string>
    <string name="run_result_title">跑步结果</string>
    <string name="total_distance">总计路程</string>
    <string name="total_time">总计时间</string>

</resources>
