<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_run_bg"
    tools:context="com.runningmusic.activity.StartRun">

    <RelativeLayout
        android:id="@+id/online_offline_switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp">

        <TextView
            android:id="@+id/online_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_bright_white"
            android:textSize="14dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/online_music"
            android:clickable="true"
            android:background="@drawable/start_run_red"/>


        <TextView
            android:id="@+id/offline_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusable="true"
            android:textColor="@color/text_bright_white"
            android:textSize="14dp"
            android:layout_toRightOf="@id/online_switcher"
            android:clickable="true"
            android:layout_marginLeft="-21dp"
            android:text="@string/offline_music"
            android:background="@drawable/start_run_grey"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/indoor_outdoor_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/indoor_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/start_run_indoor"/>

            <TextView
                android:id="@+id/indoor_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_below="@id/indoor_icon"
                android:layout_marginTop="30dp"
                android:textColor="@color/text_bright_white"
                android:layout_centerHorizontal="true"
                android:text="@string/indoor_run"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/outdoor_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/start_run_outdoor"/>

            <TextView
                android:id="@+id/outdoor_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outdoor_run"
                android:layout_below="@id/outdoor_icon"
                android:layout_marginTop="30dp"
                android:textSize="14dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/text_bright_white"/>
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/start_run_cancel"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/start_run_close"/>
    </RelativeLayout>


</RelativeLayout>
